--- a/web-app/templates/awc.html
+++ b/web-app/templates/awc.html
@@ -17,9 +17,11 @@
                         <select class="form-control" id='prop_awc'>
                             <option value="flight_category">Flight Category</option>
                             <option value="temp_c">Temperature</option>
+                            <option value="temp_c_range">Temperature Range</option>
                             <option value="dewpoint_c">Dewpoint</option>
                             <option value="temp_dewpoint_spread">Temp-Dewpoint Spread</option>
                             <option value="altim_in_hg">Altimeter</option>
+                            <option value="altim_in_hg_range">Altimeter Range</option>
                             <option value="seal_level_pressure_mb">Seal-level Pressure</option>
                             <option value="wind_dir_degrees">Wind Direction</option>
                             <option value="wind_speed_kt">Wind Speed</option>
