add delta calcs

--- a/web-app/templates/awc.html
+++ b/web-app/templates/awc.html
@@ -17,21 +17,24 @@
                         <select class="form-control" id='prop_awc'>
                             <option value="flight_category">Flight Category</option>
                             <option value="temp_c">Temperature</option>
-                            <option value="temp_c_range">Temperature Range</option>
+                            <option value="temp_c_var">Temperature Variance</option>
+                            <option value="temp_c_delta">Temperature Delta</option>
                             <option value="dewpoint_c">Dewpoint</option>
+                            <option value="dewpoint_delta">Dewpoint Delta</option>
                             <option value="temp_dewpoint_spread">Temp-Dewpoint Spread</option>
                             <option value="altim_in_hg">Altimeter</option>
-                            <option value="altim_in_hg_range">Altimeter Range</option>
-                            <option value="seal_level_pressure_mb">Seal-level Pressure</option>
+                            <option value="altim_in_hg_var">Altimeter Variance</option>
+                            <option value="altim_in_hg_delta">Altimeter Delta</option>
                             <option value="wind_dir_degrees">Wind Direction</option>
                             <option value="wind_speed_kt">Wind Speed</option>
+                            <option value="wind_speed_kt_delta">Wind Speed Delta</option>
                             <option value="wind_gust_kt">Wind Gust</option>
+                            <option value="wind_gust_kt_delat">Wind Gust Delta</option>
                             <option value="visibility_statute_mi">Visibility</option>
-                            <option value="vert_vis_ft">Vertical Visibility</option>
                             <option value="cloud_base_ft_agl_0">Cloud Base AGL</option>
+                            <option value="cloud_base_ft_agl_0_delta">Cloud Base AGL Delta</option>
                             <option value="sky_cover_0">Sky Cover</option>
                             <option value="precip_in">Precip</option>
-                            <option value="three_hr_pressure_tendency_mb">Pressure Tendency</option>
                             <option value="elevation_m">Elevation</option>
                             <option value="age">Age</option>
                         </select>
