--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="index">
+<div class="container" id="gauges">
     <h1>Coconut Barometer</h1>
 </div>
 <div class="container">
