--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -5,6 +5,29 @@
     <meta charset="UTF-8">
     <title>Coconut Barometer - KK6GPV - Adam Reeder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicons/favicon.ico') }}">
+
+    <!-- generics -->
+    <link rel="icon" href="{{ url_for('static', filename='favicons/favicon-16x16.png') }}" sizes="16x16">
+    <link rel="icon" href="{{ url_for('static', filename='favicons/favicon-32x32.png') }}" sizes="32x32">
+    <link rel="icon" href="{{ url_for('static', filename='favicons/favicon-96x96.png') }}" sizes="96x96">
+    <link rel="icon" href="{{ url_for('static', filename='favicons/apple-icon-144x144.png') }}" sizes="144x144">
+    
+    <!-- Android -->
+    <link rel="shortcut icon" sizes="192x192" href="{{ url_for('static', filename='favicons/android-icon-192x192.png') }}">
+
+    <!-- iOS -->
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicons/apple-icon-120x120.png') }}" sizes="120x120">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicons/apple-icon-152x152.png') }}" sizes="152x152">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicons/apple-icon-180x180.png') }}" sizes="180x180">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicons/apple-icon-144x144.png') }}" sizes="144x144">
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicons/apple-icon.png') }}">
+
+    <!-- Windows 8 IE 10-->
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="{{ url_for('static', filename='favicons/ms-icon-144x144.png') }}">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha384-w+8Gqjk9Cuo6XH9HKHG5t5I1VR4YBNdPt/29vwgfZR485eoEJZ8rJRbm3TR32P6k" crossorigin="anonymous"> -->
