--- a/web-app/templates/oilgas_details.html
+++ b/web-app/templates/oilgas_details.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="oilgas_detail">
+<div class="container" id="oilgas_details">
   <h1>Oil & Gas</h1>
 </div>
 <div class="container">
