--- a/web-app/templates/oilgas_map.html
+++ b/web-app/templates/oilgas_map.html
@@ -4,7 +4,7 @@
 <div class="container">
     <h1>Oil & Gas</h1>
 </div>
-<div class="container" id="oilgas">
+<div class="container" id="oilgas_maps">
     <div class="row">
         <div class="col-md-12">
             <div class="chart" id="map_oilgas">
