--- a/web-app/templates/oilgas_summary.html
+++ b/web-app/templates/oilgas_summary.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="aprs">
-    <h1>Oil Gas</h1>
+<div class="container" id="oilgas_summary">
+    <h1>Oil & Gas</h1>
 </div>
 <div class="container">
     <div class="row">
