--- a/web-app/templates/aprs.html
+++ b/web-app/templates/aprs.html
@@ -115,7 +115,7 @@
             <div class="card-deck mt-4">
                 <div class="card">
                     <div class="table-responsive-md">
-                        <table class="table table-hover table-sm" id="packets">
+                        <table class="table table-hover table-sm" id="table_paged">
                             <thead>
                                 <tr>
                                     <th scope="col">Timestamp</th>
