--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="gauges">
+<div class="container-fluid" id="gauges">
     <h1>Coconut Barometer</h1>
 </div>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <div class="alert alert-info">
