--- a/web-app/templates/n5777v.html
+++ b/web-app/templates/n5777v.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="n5777v">
+<div class="container-fluid" id="n5777v">
   <h1>N5777V</h1>
 </div>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-3">
       <p align=center><img border=0 width="100%"
