--- a/web-app/templates/oilgas_summary.html
+++ b/web-app/templates/oilgas_summary.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="oilgas_summary">
+<div class="container-fluid" id="oilgas_summary">
     <h1>Oil & Gas</h1>
 </div>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <div class="card-deck mt-4">
