--- a/web-app/templates/paragliding.html
+++ b/web-app/templates/paragliding.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="paragliding">
+<div class="container-fluid" id="paragliding">
   <h1>Paragliding</h1>
 </div>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-5">
       <p align=center><img src="static/images/ant_hill_track.png" alt="GPS track of typical Ant Hill flight (side, top)"
