--- a/web-app/templates/aircraft.html
+++ b/web-app/templates/aircraft.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="aircraft">
+<div class="container-fluid" id="aircraft">
   <h1>Aircraft</h1>
 </div>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-4">
       <p><img src="static/images/first_solo.jpg" alt="First solo" width="100%"></p>
