--- a/web-app/templates/aprs.html
+++ b/web-app/templates/aprs.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="aprs">
+<div class="container-fluid" id="aprs">
     <h1>APRS</h1>
 </div>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <div class="card-deck mt-4">
@@ -61,7 +61,7 @@
                     <div class="chart" id="map_aprs">
                         <script>
                             var graphs = {{ map_aprs | safe}};
-                            Plotly.plot('map_aprs', graphs.data, graphs.layout, { displayModeBar: false });
+                            Plotly.plot('map_aprs', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
                         </script>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                     <div class="chart" id="plot_speed">
                         <script>
                             var graphs = {{ plot_speed | safe}};
-                            Plotly.plot('plot_speed', graphs.data, graphs.layout, { displayModeBar: false });
+                            Plotly.plot('plot_speed', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
                         </script>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <div class="chart" id="plot_alt">
                         <script>
                             var graphs = {{ plot_alt | safe}};
-                            Plotly.plot('plot_alt', graphs.data, graphs.layout, { displayModeBar: false });
+                            Plotly.plot('plot_alt', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
                         </script>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                     <div class="chart" id="plot_course">
                         <script>
                             var graphs = {{ plot_course | safe}};
-                            Plotly.plot('plot_course', graphs.data, graphs.layout, { displayModeBar: false });
+                            Plotly.plot('plot_course', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
                         </script>
                     </div>
                 </div>
