--- a/web-app/templates/image.html
+++ b/web-app/templates/image.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container">
+<div class="container-fluid">
   <h1>{{title}}</h1>
 </div>
-<div class="container">
+<div class="container-fluid">
   <!-- For loop logic of jinja template -->
   <div class="row">
     <div class="col-md-12">
