--- a/web-app/templates/oilgas_map.html
+++ b/web-app/templates/oilgas_map.html
@@ -1,16 +1,16 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container">
+<div class="container-fluid">
     <h1>Oil & Gas</h1>
 </div>
-<div class="container" id="oilgas_maps">
+<div class="container-fluid" id="oilgas_maps">
     <div class="row">
         <div class="col-md-12">
-            <div class="chart" id="map_oilgas">
+            <div class="map" id="map_oilgas">
                 <script>
                     var graphs = {{ plot | safe}};
-                    Plotly.plot('map_oilgas', graphs.data, graphs.layout, {displayModeBar: false});
+                    Plotly.plot('map_oilgas', graphs.data, graphs.layout, {displayModeBar: false, responsive: true });
                 </script>
             </div>
         </div>
