--- a/web-app/templates/soaring.html
+++ b/web-app/templates/soaring.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container" id="soaring">
+<div class="container-fluid" id="soaring">
   <h1>Soaring</h1>
 </div>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-4">
       <p><img src="static/images/soaring_tsp2.jpg" alt="Soaring in the Tehachapi convergence" width="100%"></p>
