--- a/web-app/templates/travel.html
+++ b/web-app/templates/travel.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="container">
+<div class="container-fluid">
   <h1>Travel</h1>
 </div>
 {% endblock %}
