--- a/web-app/templates/awc.html
+++ b/web-app/templates/awc.html
@@ -48,7 +48,7 @@
         <div class="col-md-12">
             <div class="card-deck mt-4">
                 <div class="card">
-                    <div class="map" id="map_awc">
+                    <div class="mapawc" id="map_awc">
                         <script>
                             var graphs = {{ plot | safe}};
                             Plotly.plot('map_awc', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
