--- a/web-app/templates/wx.html
+++ b/web-app/templates/wx.html
@@ -98,6 +98,18 @@
         </div>
       </div>
     </div>
+    <div class="col-md-6">
+      <div class="card-deck mt-4">
+        <div class="card">
+          <div class="chart" id="fig_thp">
+            <script>
+              var graphs = {{ fig_thp | safe}};
+              Plotly.newPlot('fig_thp', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
+            </script>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
