--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -20,25 +20,29 @@
                     <div class="card-header">
                         <h5 class="card-title" align=center id="temp" val="{{wx['temp_f']}}">Temp</h5>
                     </div>
-                    <br><div align=center id="gauge_temp" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_temp" width="100%"></div><br>
                 </div>
                 <div class="card">
                     <div class="card-header">
                         <h5 class="card-title" align=center id="dewpt" val="{{wx['dewpoint_f']}}">Dewpoint</h5>
                     </div>
-                    <br><div align=center id="gauge_dewpt" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_dewpt" width="100%"></div><br>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                            <h5 class="card-title" align=center id="hum" val="{{wx['relative_humidity']}}">Humidity</h5>
+                        <h5 class="card-title" align=center id="hum" val="{{wx['relative_humidity']}}">Humidity</h5>
                     </div>
-                    <br><div align=center id="gauge_hum" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_hum" width="100%"></div><br>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                            <h5 class="card-title" align=center id="pres" val="{{wx['pressure_in']}}">Pressure</h5>
+                        <h5 class="card-title" align=center id="pres" val="{{wx['pressure_in']}}">Pressure</h5>
                     </div>
-                    <br><div align=center id="gauge_pres" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_pres" width="100%"></div><br>
                 </div>
             </div>
         </div>
@@ -48,34 +52,39 @@
             <div class="card-deck mt-4">
                 <div class="card">
                     <div class="card-header">
-                            <h5 class="card-title" align=center id="winddeg" val="{{wx['wind_degrees']}}">Wind Degrees</h5>
+                        <h5 class="card-title" align=center id="winddeg" val="{{wx['wind_degrees']}}">Wind Degrees</h5>
                     </div>
-                    <br><div align=center id="gauge_winddeg" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_winddeg" width="100%"></div><br>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                            <h5 class="card-title" align=center id="wind" val1="{{wx['wind_mph']}}"
+                        <h5 class="card-title" align=center id="wind" val1="{{wx['wind_mph']}}"
                             val2="{{wx['wind_gust_mph']}}">Wind/Gust</h5>
                     </div>
-                    <br><div align=center id="gauge_windspd" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_windspd" width="100%"></div><br>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                            <h5 class="card-title" align=center id="rain" val="{{wx['precip_today_in']}}">Daily Rain</h5>
+                        <h5 class="card-title" align=center id="rain" val="{{wx['precip_today_in']}}">Daily Rain</h5>
                     </div>
-                    <br><div align=center id="gauge_rain" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_rain" width="100%"></div><br>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                            <h5 class="card-title" align=center id="solar" val="{{wx['solar_radiation']}}">Solar</h5>
+                        <h5 class="card-title" align=center id="solar" val="{{wx['solar_radiation']}}">Solar</h5>
                     </div>
-                    <br><div align=center id="gauge_solar" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_solar" width="100%"></div><br>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                            <h5 class="card-title" align=center id="uv" val="{{wx['UV']}}">UV</h5>
+                        <h5 class="card-title" align=center id="uv" val="{{wx['UV']}}">UV</h5>
                     </div>
-                    <br><div align=center id="gauge_uv" width="100%"></div><br>
+                    <br>
+                    <div align=center id="gauge_uv" width="100%"></div><br>
                 </div>
             </div>
         </div>
