--- a/web-app/templates/oilgas_details.html
+++ b/web-app/templates/oilgas_details.html
@@ -9,14 +9,17 @@
     <div class="col-md-12">
       <div class="card-deck mt-4">
         <div class="card">
-            <div class="card-header">
-                <h5 class="card-title" align=center>Production Detail: {{ api }}</h5>
-            </div>
-            <br>
+          <div class="card-header">
+            <h5 class="card-title" align=center>Production Detail: {{ api }}</h5>
+          </div>
+          <br>
           <div class="chart" id="graph_oilgas">
             <script>
-              var graphs = {{ plot | safe}};
-              Plotly.plot('graph_oilgas', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
+              var graphs = {{ plot | safe }};
+              Plotly.plot('graph_oilgas', graphs.data, graphs.layout, {
+                displayModeBar: false,
+                responsive: true
+              });
             </script>
           </div>
         </div>
