--- a/web-app/templates/oilgas_map.html
+++ b/web-app/templates/oilgas_map.html
@@ -9,8 +9,11 @@
         <div class="col-md-12">
             <div class="mapog" id="map_oilgas">
                 <script>
-                    var graphs = {{ plot | safe}};
-                    Plotly.plot('map_oilgas', graphs.data, graphs.layout, {displayModeBar: false, responsive: true });
+                    var graphs = {{ plot | safe }};
+                    Plotly.plot('map_oilgas', graphs.data, graphs.layout, {
+                        displayModeBar: false,
+                        responsive: true
+                    });
                 </script>
             </div>
         </div>
