--- a/web-app/templates/paragliding.html
+++ b/web-app/templates/paragliding.html
@@ -99,7 +99,8 @@
   <div class="row">
     <div class="col-md-6">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lod9Xuo2zxw?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item"
+          src="https://www.youtube.com/embed/lod9Xuo2zxw?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
       </div>
     </div>
     <div class="col-md-6">
@@ -109,7 +110,8 @@
   <div class="row">
     <div class="col-md-6">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VD-7Tkmp7JU?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item"
+          src="https://www.youtube.com/embed/VD-7Tkmp7JU?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen></iframe>
       </div>
     </div>
     <div class="col-md-6">
