--- a/web-app/templates/wx.html
+++ b/web-app/templates/wx.html
@@ -31,8 +31,10 @@
         <div class="card">
           <div class="chart" id="fig_td">
             <script>
-              var graphs = {{ fig_td | safe}};
-              Plotly.plot('fig_td', graphs.data, graphs.layout, { displayModeBar: false });
+              var graphs = {{ fig_td | safe }};
+              Plotly.plot('fig_td', graphs.data, graphs.layout, {
+                displayModeBar: false
+              });
             </script>
           </div>
         </div>
@@ -43,8 +45,10 @@
         <div class="card">
           <div class="chart" id="fig_pr">
             <script>
-              var graphs = {{ fig_pr | safe}};
-              Plotly.plot('fig_pr', graphs.data, graphs.layout, { displayModeBar: false });
+              var graphs = {{ fig_pr | safe }};
+              Plotly.plot('fig_pr', graphs.data, graphs.layout, {
+                displayModeBar: false
+              });
             </script>
           </div>
         </div>
@@ -55,8 +59,10 @@
         <div class="card">
           <div class="chart" id="fig_pc">
             <script>
-              var graphs = {{ fig_pc | safe}};
-              Plotly.plot('fig_pc', graphs.data, graphs.layout, { displayModeBar: false });
+              var graphs = {{ fig_pc | safe }};
+              Plotly.plot('fig_pc', graphs.data, graphs.layout, {
+                displayModeBar: false
+              });
             </script>
           </div>
         </div>
@@ -67,8 +73,10 @@
         <div class="card">
           <div class="chart" id="fig_wd">
             <script>
-              var graphs = {{ fig_wd | safe}};
-              Plotly.plot('fig_wd', graphs.data, graphs.layout, { displayModeBar: false });
+              var graphs = {{ fig_wd | safe }};
+              Plotly.plot('fig_wd', graphs.data, graphs.layout, {
+                displayModeBar: false
+              });
             </script>
           </div>
         </div>
@@ -79,8 +87,10 @@
         <div class="card">
           <div class="chart" id="fig_su">
             <script>
-              var graphs = {{ fig_su | safe}};
-              Plotly.plot('fig_su', graphs.data, graphs.layout, { displayModeBar: false });
+              var graphs = {{ fig_su | safe }};
+              Plotly.plot('fig_su', graphs.data, graphs.layout, {
+                displayModeBar: false
+              });
             </script>
           </div>
         </div>
@@ -91,8 +101,11 @@
         <div class="card">
           <div class="chart" id="fig_wr">
             <script>
-              var graphs = {{ fig_wr | safe}};
-              Plotly.newPlot('fig_wr', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
+              var graphs = {{ fig_wr | safe }};
+              Plotly.newPlot('fig_wr', graphs.data, graphs.layout, {
+                displayModeBar: false,
+                responsive: true
+              });
             </script>
           </div>
         </div>
@@ -103,8 +116,11 @@
         <div class="card">
           <div class="chart" id="fig_thp">
             <script>
-              var graphs = {{ fig_thp | safe}};
-              Plotly.newPlot('fig_thp', graphs.data, graphs.layout, { displayModeBar: false, responsive: true });
+              var graphs = {{ fig_thp | safe }};
+              Plotly.newPlot('fig_thp', graphs.data, graphs.layout, {
+                displayModeBar: false,
+                responsive: true
+              });
             </script>
           </div>
         </div>
