--- a/web-app/static/styles/footer.css
+++ b/web-app/static/styles/footer.css
@@ -19,6 +19,18 @@ body {
   height: 90vh;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
 /* .footer {
   position: absolute;
   bottom: 0;
