update geojson source

--- a/web-app/templates/oilgas_mapbox.html
+++ b/web-app/templates/oilgas_mapbox.html
@@ -20,7 +20,7 @@
 
             map.addSource('wells', {
                 type: 'geojson',
-                data: 'http://0.0.0.0:4000/static/wells.geojson'
+                data: 'http://kk6gpv.net/static/wells.geojson'
             });
 
             map.addLayer({
