edit source for geojson again

--- a/web-app/templates/oilgas_mapbox.html
+++ b/web-app/templates/oilgas_mapbox.html
@@ -20,7 +20,8 @@
 
             map.addSource('wells', {
                 type: 'geojson',
-                data: 'http://kk6gpv.net/static/wells.geojson'
+                // data: 'http://kk6gpv.net/static/wells.geojson',
+                data: './static/wells.geojson'
             });
 
             map.addLayer({
