--- a/web-app/templates/oilgas_mapbox.html
+++ b/web-app/templates/oilgas_mapbox.html
@@ -21,7 +21,7 @@
             map.addSource('wells', {
                 type: 'geojson',
                 // data: 'http://kk6gpv.net/static/wells.geojson',
-                data: './static/wells.geojson'
+                data: '../static/wells.geojson'
             });
 
             map.addLayer({
