--- a/web-app/static/styles/footer.css
+++ b/web-app/static/styles/footer.css
@@ -19,7 +19,7 @@ body {
   height: 90vh;
 }
 
-body {
+/* body {
   margin: 0;
   padding: 0;
 }
@@ -29,7 +29,7 @@ body {
   top: 0;
   bottom: 0;
   width: 100%;
-}
+} */
 
 /* .footer {
   position: absolute;
