--- a/web-app/templates/oilgas_mapbox.html
+++ b/web-app/templates/oilgas_mapbox.html
@@ -5,32 +5,62 @@
     <h1>Oil & Gas</h1>
 </div>
 <div class="container-fluid">
-    <div id='map'></div>
-    <script>
-        mapboxgl.accessToken =
-            'pk.eyJ1IjoiYXJlZWQxNDUiLCJhIjoiY2phdzNsN2ZoMGh0bjMybzF3cTkycWYyciJ9.4aS7z-guI2VDlP3duMg2FA';
-        var map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/mapbox/light-v10',
-            center: [-96, 37.8],
-            zoom: 3
-        });
+    <div class="row">
+        <div class="col-md-12">
+            <div class="mapog" id='map'></div>
+            <script>
+                mapboxgl.accessToken =
+                    'pk.eyJ1IjoiYXJlZWQxNDUiLCJhIjoiY2phdzNsN2ZoMGh0bjMybzF3cTkycWYyciJ9.4aS7z-guI2VDlP3duMg2FA';
 
-        map.on('load', function () {
+                var map = new mapboxgl.Map({
+                    container: 'map',
+                    style: 'mapbox://styles/mapbox/light-v10',
+                    center: [-96, 37.8],
+                    zoom: 3
+                });
 
-            map.addSource('wells', {
-                type: 'geojson',
-                // data: 'http://kk6gpv.net/static/wells.geojson',
-                data: '../static/wells.geojson'
-            });
+                map.addControl(new mapboxgl.GeolocateControl({
+                    positionOptions: {
+                        enableHighAccuracy: true
+                    },
+                    trackUserLocation: true
+                }));
 
-            map.addLayer({
-                'id': 'population',
-                'type': 'circle',
-                'source': 'wells',
-            });
-        });
-    </script>
+                map.on('load', function () {
+
+                    map.addSource('wells', {
+                        type: 'geojson',
+                        data: '../static/wells.geojson'
+                    });
+
+                    map.addLayer({
+                        'id': 'population',
+                        'type': 'circle',
+                        'source': 'wells',
+                        'paint': {
+                            'circle-radius': {
+                                'base': 1.75,
+                                'stops': [
+                                    [12, 2],
+                                    [22, 20]
+                                ]
+                            },
+                            'circle-color': [
+                                'match',
+                                ['get', 'pwt'],
+                                'OG', '#46940a',
+                                'SC', '#71d624',
+                                'WF', '#2483d6',
+                                'SF', '#db2e3f',
+                                /* other */
+                                '#000000'
+                            ]
+                        }
+                    });
+                });
+            </script>
+        </div>
+    </div>
     <div id="log-event"></div>
     <div id="log-layout"></div>
 </div>
