updates to awc plot

--- a/web-app/templates/awc.html
+++ b/web-app/templates/awc.html
@@ -20,7 +20,7 @@
                             <option value="temp_c_var">Temperature Variance</option>
                             <option value="temp_c_delta">Temperature Delta</option>
                             <option value="dewpoint_c">Dewpoint</option>
-                            <option value="dewpoint_delta">Dewpoint Delta</option>
+                            <option value="dewpoint_c_delta">Dewpoint Delta</option>
                             <option value="temp_dewpoint_spread">Temp-Dewpoint Spread</option>
                             <option value="altim_in_hg">Altimeter</option>
                             <option value="altim_in_hg_var">Altimeter Variance</option>
@@ -29,7 +29,7 @@
                             <option value="wind_speed_kt">Wind Speed</option>
                             <option value="wind_speed_kt_delta">Wind Speed Delta</option>
                             <option value="wind_gust_kt">Wind Gust</option>
-                            <option value="wind_gust_kt_delat">Wind Gust Delta</option>
+                            <option value="wind_gust_kt_delta">Wind Gust Delta</option>
                             <option value="visibility_statute_mi">Visibility</option>
                             <option value="cloud_base_ft_agl_0">Cloud Base AGL</option>
                             <option value="cloud_base_ft_agl_0_delta">Cloud Base AGL Delta</option>
