--- a/web-app/templates/wx.html
+++ b/web-app/templates/wx.html
@@ -96,6 +96,20 @@
         </div>
       </div>
     </div>
+    <div class="col-md-12">
+      <div class="card-deck mt-4">
+        <div class="card">
+          <div class="chart" id="fig_cb">
+            <script>
+              var graphs = {{ fig_cb | safe }};
+              Plotly.plot('fig_cb', graphs.data, graphs.layout, {
+                displayModeBar: false
+              });
+            </script>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="col-md-6">
       <div class="card-deck mt-4">
         <div class="card">
