add blips and new pages

--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -71,6 +71,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/awc">Aviation Weather</a>
                         <a class="dropdown-item" href="/wx">Station Weather</a>
+                        <a class="dropdown-item" href="/blips">BLIP Maps</a>
                     </div>
                 </li>
                 <li class="nav-item">
