--- a/web-app/templates/layout.html
+++ b/web-app/templates/layout.html
@@ -72,6 +72,7 @@
                         <a class="dropdown-item" href="/awc">Aviation Weather</a>
                         <a class="dropdown-item" href="/wx">Station Weather</a>
                         <a class="dropdown-item" href="/blips">BLIP Maps</a>
+                        <a class="dropdown-item" href="/soundings">Soundings</a>
                     </div>
                 </li>
                 <li class="nav-item">
