--- a/web-app/templates/awc.html
+++ b/web-app/templates/awc.html
@@ -68,11 +68,7 @@
                 <div class="card">
                     <div class="mapawc" id="map_awc">
                         <script>
-                            var graphs = {
-                                {
-                                    plot | safe
-                                }
-                            };
+                            var graphs = {{ plot | safe }};
                             Plotly.plot('map_awc', graphs.data, graphs.layout, {
                                 displayModeBar: false,
                                 responsive: true
